--- a/.env.development
+++ b/.env.development
@@ -3,10 +3,10 @@
 VITE_APP_PORT=8090
 
 # 代理前缀
-VITE_APP_BASE_API=/dev-api
+VITE_APP_BASE_API=/api
 
 # 接口地址
-VITE_APP_API_URL=http://localhost:8989
+VITE_APP_API_URL=http://127.0.0.1:9090/blog
 
 # WebSocket 端点（不配置则关闭），线上 ws://api.youlai.tech/ws ，本地 ws://localhost:8989/ws
 VITE_APP_WS_ENDPOINT=
