--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "pinia-plugin-persistedstate": "^4.3.0",
     "vite-plugin-svg-icons": "^2.0.1",
     "vue": "^3.5.13",
+    "vue-i18n": "^12.0.0-alpha.2",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
